--- a/NLP PIPELINE.ipynb
+++ b/NLP PIPELINE.ipynb
@@ -148,7 +148,7 @@
    ],
    "source": [
     "#reading in data\n",
-    "df = pd.read_json('CETM47-22_23-AS2-Data.json')\n",
+    "df = pd.read_json('Data.json')\n",
     "df.head()"
    ]
   },
